fixed visual issue with overflow

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
+html,
+body {
+  margin: 0;
+}
+
 .box {
   display: flex;
   justify-content: center;
